--- a/views/edit.pug
+++ b/views/edit.pug
@@ -33,14 +33,10 @@ block content
               button(class='btn waves-effect waves-light', type='submit', name='action') submit
                 i(class='material-icons right') send
 
-        a(class='btn-floating btn-large waves-effect waves-light green right' onclick='add_line()')
-          i(class='material-icons') add
-        pre(class='right')="  "
-        a(class='btn-floating btn-large waves-effect waves-light red right' onclick='del_line()')
-          i(class='material-icons') clear
-        pre(class='right')="  "
-        form(action='/edit-upload', method='POST', enctype='multipart/form-data')
-          div(class='file-field input-field')
-            a(class='btn-large waves-effect waves-light blue right')
-              i(class='material-icons') file_upload
-              input(name='upload_file' type='file' onchange='this.form.submit();')
+      a(class='btn-floating btn-large waves-effect waves-light green' onclick='add_line()')
+        i(class='material-icons') add
+      form(action='/edit-upload', method='POST', enctype='multipart/form-data')
+        div(class='file-field input-field')
+          a(class='btn-large waves-effect waves-light blue right')
+            i(class='material-icons') file_upload
+            input(name='upload_file' type='file' onchange='this.form.submit();')
